# inst414-semester-project

./: INST414_Sprint2_Code_Ahmed_Khan.ipynb  README.md
inst414_semester_project/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
inst414_semester_project/data/interim/: df_filtered.csv
inst414_semester_project/data/processed/: df_cleaned.csv
inst414_semester_project/docs/: mkdocs.yml
inst414_semester_project/docs/docs/: index.md
inst414_semester_project/notebooks/: Data_Analysis_Hypothesis_And_Regression.ipynb  INST414_Sprint2_Code_Ahmed_Khan.ipynb  Preliminary_Data_Cleaning_And_Preprocessing.ipynb  Research_Master_Code.ipynb  Summary_Statistics_Visualizations.ipynb
